--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/frag_sidebar.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/frag_sidebar.html
@@ -50,7 +50,7 @@
     </li>​
 
     <li><a th:classappend="${page == '/dashboard_admin'}? active : ''" href="/dashboard_admin">Dashboard</a></li>
-    <li id="news"><a th:classappend="${page == '/news'}? active : ''" href="#news">Add News</a></li>
+    <li><a th:classappend="${page == '/news'}? active : ''" href="/news">News</a></li>
     <li><a th:classappend="${page == '/candidates_admin'}? active : ''" href="/candidates_admin">View Applications</a></li>
     <li><a th:classappend="${page == '/teachers'}? active : ''" href="/teachers">Teachers</a></li>
     <li><a th:classappend="${page == '/classroom'}? active : ''" href="/classroom">Classrooms</a></li>
