--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Montserrat:700,400|Roboto:400,100,300,500,900"
     rel='stylesheet' type='text/css'/>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
 </head>
 <body>
 
