--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/news.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/news.html
@@ -7,32 +7,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900%7CMontserrat:700,400%7CRoboto:400,100,300,500,900'
           rel='stylesheet' type='text/css'>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
     <style>
-        body {
-            margin: 0;
-            min-width: 250px;
-        }
 
-        /* Include the padding and border in an element's total width and height */
-        * {
-            box-sizing: border-box;
-        }
 
         /* Remove margins and padding from the list */
-        ul {
+        ol {
             margin: 0;
             padding: 0;
         }
 
         /* Style the list items */
-        ul li {
+        ol .lista {
+            list-style-type: none;
             cursor: pointer;
             position: relative;
             padding: 12px 8px 12px 40px;
             background: #eee;
             font-size: 18px;
             transition: 0.2s;
-
+            margin-bottom: 1px;
             /* make the list items unselectable */
             -webkit-user-select: none;
             -moz-user-select: none;
@@ -41,33 +35,48 @@
         }
 
         /* Set all odd list items to a different color (zebra-stripes) */
-        ul li:nth-child(odd) {
+        ol .lista:nth-child(odd) {
             background: #f9f9f9;
         }
 
         /* Darker background-color on hover */
-        ul li:hover {
+        ol .lista:hover {
             background: #ddd;
         }
 
         /* When clicked on, add a background color and strike out text */
-        ul li.checked {
+        ol .lista.checked {
             background: #888;
             color: #fff;
             text-decoration: line-through;
         }
-
 
         /* Style the close button */
         .close {
             position: absolute;
             right: 0;
             top: 0;
-            padding: 12px 16px 12px 16px;
+            padding: 8px 16px 8px 16px;
         }
 
         .close:hover {
             background-color: #f44336;
+            color: white;
+        }
+
+        /* Style the edit button */
+        .edit {
+            position: absolute;
+            right: 0;
+            top: 0;
+            padding: 12px 16px 12px 16px;
+            margin-right: 48px;
+            background-color: orange;
+        }
+
+        .edit:hover {
+            background-color: orange;
+            opacity: 0.6;
             color: white;
         }
 
@@ -111,66 +120,47 @@
         .addBtn:hover {
             background-color: #bbb;
         }
-        #myUl{
+        #myol{
             display:block;
-        }
-        #hello{
-            display: block;
-            position: relative;
-            overflow: auto;
         }
         #news_div{
             width: 80%;
+            margin:auto;
+            position: relative;
         }
     </style>
 </head>
 <body>
-
-<ul th:replace="frag_sidebar :: sidebar_admin">
-    sidebar goes here
-</ul>
-
+<ul th:replace="frag_sidebar :: sidebar_admin ('/news')"></ul>
 <div class="main">
     <div id="news_div">
-    <div id="myDIV" class="header">
-        <h2 style="margin:5px">Announcements List</h2>
-        <input type="text" id="myInput" placeholder="Title...">
-        <span onclick="newElement()" class="addBtn">Add</span>
-    </div>
+        <div class="header">
+            <h2 style="margin:5px">Announcements List</h2>
+            <p id="news" style="background-color: #fff; padding: 14px; width: 20%; margin: auto; font-size: 1.3em;"><a href="#news" style="text-decoration: none;">Add News</a></p>
+        </div>
 
-    <ul id="myUL">
-        <li>Hit the gym</li>
+        <ol id="myol">
 
-        <li>hjjjhkjhk</li>
-        <li>Buy eggs</li>
-        <li>Read a book</li>
-        <li> <div id = "hello">Organize officeaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-            aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-            aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-
-            aaaaaaaaaaaaaaaaaaaaaaaa
-
-            aaaaaaaaaaaaaaaaaaaaaaaaaa</div></li>
-    </ul>
+        </ol>
     </div>
 
 </div>
 
-<div id="news_modal" class="news">
-    <div class="news_content">
-        <div class="news_header">
-            <span class="close">&times;</span>
-            <h2>Add News</h2>
-        </div>
-        <div class="news_body">
-            <form action="#post_news">
-                <!--<input type="text" name="news_title" placeholder="News title"> -->
-                <textarea id="news_text"></textarea>
-                <button>Post</button>
-            </form>
+    <div id="news_modal" class="news">
+        <div class="news_content">
+            <div class="news_header">
+                <h2>Add News</h2>
+            </div>
+            <div class="news_body">
+                <form action="#post_news">
+                    <input id="title_add" type="text" name="news_title" placeholder="News title" style="background-color: #eee;">
+                    <textarea id="news_text" style="background-color: #eee;"></textarea>
+                    <button id="add_ad" value="submit">Add</button>
+                </form>
+            </div>
         </div>
     </div>
-</div>
+
 
 <script type="text/javascript" src="../JS/admin_news.js"></script>
 <script type="text/javascript" src="../JS/news.js"></script>
